--- a/scss/normal/normalize/_reset.scss
+++ b/scss/normal/normalize/_reset.scss
@@ -18,8 +18,8 @@ em {
   font-style:        oblique;
 }
 
-code, samp, pre {
-  font-family:       monospace;
+code, samp, pre, kbd {
+  font-family:       monospace, monospace;
 }
 
 ins {
@@ -27,7 +27,7 @@ ins {
 }
 
 pre {
-  white-space:       pre-line;
+  white-space:       pre;
   margin:            0.2em 0 0;
 }
 
@@ -36,7 +36,7 @@ s {
 }
 
 b, strong {
-  font-weight:       bold;
+  font-weight:       bolder;
 }
 
 sub {
@@ -69,6 +69,10 @@ kbd {
 
 summary {
   display:           list-item;
+}
+
+blockquote {
+  margin: 0;
 }
 
 img, video {
