--- a/scss/normal/normalize/_attr.scss
+++ b/scss/normal/normalize/_attr.scss
@@ -1,10 +1,10 @@
 [hidden] {
-  /* !important In case it gets overriden somewhere */
+  /* In case it gets overriden somewhere */
   display: none !important;
 }
 
 [visibility="hidden"] {
-    /* !important In case it gets overriden somewhere */
+    /* In case it gets overriden somewhere */
     visibility: hidden !important;
 }
 
