Text Column is making no sense in Chrome
Text Column is making no sense in Chrome

--- a/css/classes.css
+++ b/css/classes.css
@@ -178,14 +178,15 @@ html[xmlns] .cf {
   .hide-phone, .hide-big-desktop, .hide-desktop, .hide-tab-x, .hide-tablet {
     display: none; } }
 
-@media only screen and (min-width: 1600px) and (max-width: 1919px) {
+@media only screen and (min-width: 1920px) {
   .show-big-desktop {
     display: initial;
     display: unset; } }
 
-@media only screen and (min-width: 1920px) {
+@media only screen and (min-width: 1600px) and (max-width: 1919px) {
   .show-big-desktop {
-    display: none; } }
+    display: initial;
+    display: unset; } }
 
 @media only screen and (min-width: 1024px) and (max-width: 1599px) {
   .show-desktop {
@@ -683,8 +684,9 @@ html[xmlns] .cf {
 ** Text containers and columns **
 */
 .text-col-1 {
-  -webkit-columns: 1;
-  columns: 1; }
+  width: 100%;
+  columns: 1;
+  -webkit-columns: 1; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -693,8 +695,9 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-2 {
-  -webkit-columns: 2;
-  columns: 2; }
+  width: 100%;
+  columns: 2;
+  -webkit-columns: 2; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -703,8 +706,9 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-3 {
-  -webkit-columns: 3;
-  columns: 3; }
+  width: 100%;
+  columns: 3;
+  -webkit-columns: 3; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -717,8 +721,9 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-4 {
-  -webkit-columns: 4;
-  columns: 4; }
+  width: 100%;
+  columns: 4;
+  -webkit-columns: 4; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -731,8 +736,9 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-5 {
-  -webkit-columns: 5;
-  columns: 5; }
+  width: 100%;
+  columns: 5;
+  -webkit-columns: 5; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -750,8 +756,9 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-6 {
-  -webkit-columns: 6;
-  columns: 6; }
+  width: 100%;
+  columns: 6;
+  -webkit-columns: 6; }
   .text-col-6::after {
     display: block;
     clear: both;
