--- a/css/library.css
+++ b/css/library.css
@@ -988,9 +988,6 @@ html[xmlns] .cf {
 /*
 ** Container **
 */
-.container {
-  clear: both; }
-
 /*
 ** Containers and columns **
 */
@@ -1396,9 +1393,8 @@ html[xmlns] .cf {
 ** Text containers and columns **
 */
 .text-col-1 {
-  width: 100%;
-  columns: 1;
-  -webkit-columns: 1; }
+  -webkit-columns: 1;
+  columns: 1; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -1407,9 +1403,8 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-2 {
-  width: 100%;
-  columns: 2;
-  -webkit-columns: 2; }
+  -webkit-columns: 2;
+  columns: 2; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -1418,9 +1413,8 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-3 {
-  width: 100%;
-  columns: 3;
-  -webkit-columns: 3; }
+  -webkit-columns: 3;
+  columns: 3; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -1433,9 +1427,8 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-4 {
-  width: 100%;
-  columns: 4;
-  -webkit-columns: 4; }
+  -webkit-columns: 4;
+  columns: 4; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -1448,9 +1441,8 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-5 {
-  width: 100%;
-  columns: 5;
-  -webkit-columns: 5; }
+  -webkit-columns: 5;
+  columns: 5; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -1468,9 +1460,8 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-6 {
-  width: 100%;
-  columns: 6;
-  -webkit-columns: 6; }
+  -webkit-columns: 6;
+  columns: 6; }
   .text-col-6::after {
     display: block;
     clear: both;
