--- a/css/classes.css
+++ b/css/classes.css
@@ -681,6 +681,7 @@ html[xmlns] .cf {
 ** Text containers and columns **
 */
 .text-col-1 {
+  width: 100%;
   -webkit-columns: 1;
   columns: 1; }
   .text-col-1::after {
@@ -691,6 +692,7 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-2 {
+  width: 100%;
   -webkit-columns: 2;
   columns: 2; }
   .text-col-2::after {
@@ -701,6 +703,7 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-3 {
+  width: 100%;
   -webkit-columns: 3;
   columns: 3; }
   .text-col-3::after {
@@ -715,6 +718,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-4 {
+  width: 100%;
   -webkit-columns: 4;
   columns: 4; }
   .text-col-4::after {
@@ -729,6 +733,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-5 {
+  width: 100%;
   -webkit-columns: 5;
   columns: 5; }
   .text-col-5::after {
@@ -748,6 +753,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-6 {
+  width: 100%;
   -webkit-columns: 6;
   columns: 6; }
   .text-col-6::after {
