--- a/css/library.css
+++ b/css/library.css
@@ -1393,6 +1393,7 @@ html[xmlns] .cf {
 ** Text containers and columns **
 */
 .text-col-1 {
+  width: 100%;
   -webkit-columns: 1;
   columns: 1; }
   .text-col-1::after {
@@ -1403,6 +1404,7 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-2 {
+  width: 100%;
   -webkit-columns: 2;
   columns: 2; }
   .text-col-2::after {
@@ -1413,6 +1415,7 @@ html[xmlns] .cf {
     content: " "; }
 
 .text-col-3 {
+  width: 100%;
   -webkit-columns: 3;
   columns: 3; }
   .text-col-3::after {
@@ -1427,6 +1430,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-4 {
+  width: 100%;
   -webkit-columns: 4;
   columns: 4; }
   .text-col-4::after {
@@ -1441,6 +1445,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-5 {
+  width: 100%;
   -webkit-columns: 5;
   columns: 5; }
   .text-col-5::after {
@@ -1460,6 +1465,7 @@ html[xmlns] .cf {
       columns: 1; } }
 
 .text-col-6 {
+  width: 100%;
   -webkit-columns: 6;
   columns: 6; }
   .text-col-6::after {
