--- a/css/classes.css
+++ b/css/classes.css
@@ -683,7 +683,10 @@ html[xmlns] .cf {
 .text-col-1 {
   width: 100%;
   -webkit-columns: 1;
-  columns: 1; }
+  columns: 1;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -694,7 +697,10 @@ html[xmlns] .cf {
 .text-col-2 {
   width: 100%;
   -webkit-columns: 2;
-  columns: 2; }
+  columns: 2;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -705,7 +711,10 @@ html[xmlns] .cf {
 .text-col-3 {
   width: 100%;
   -webkit-columns: 3;
-  columns: 3; }
+  columns: 3;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -720,7 +729,10 @@ html[xmlns] .cf {
 .text-col-4 {
   width: 100%;
   -webkit-columns: 4;
-  columns: 4; }
+  columns: 4;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -735,7 +747,10 @@ html[xmlns] .cf {
 .text-col-5 {
   width: 100%;
   -webkit-columns: 5;
-  columns: 5; }
+  columns: 5;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -755,7 +770,10 @@ html[xmlns] .cf {
 .text-col-6 {
   width: 100%;
   -webkit-columns: 6;
-  columns: 6; }
+  columns: 6;
+  -webkit-column-break-inside: avoid;
+  page-break-inside: avoid;
+  break-inside: avoid; }
   .text-col-6::after {
     display: block;
     clear: both;
