--- a/scss/classes/layout/_layout.scss
+++ b/scss/classes/layout/_layout.scss
@@ -140,6 +140,9 @@
   .text-col-#{$i} {
     width: 100%;
     columns: $i;
+    -webkit-column-break-inside: avoid;
+    page-break-inside: avoid;
+    break-inside: avoid;
     
     @include clearfix;
     @include mq(tablet) {
