--- a/test/classes.pug
+++ b/test/classes.pug
@@ -232,7 +232,7 @@ head
   .column-5.show-phone .show-phone
   
 .container
-  p.text-col-1 Text Columns
+  p.text-col-1#text-cols Text Columns
   
   p.text-col-1 .text-col-1
   
