--- a/css/normalize.css
+++ b/css/normalize.css
@@ -300,6 +300,12 @@ form, input, textarea, button, legend, select, option {
   -moz-padding-end: 0;
   padding-inline-end: 0; }
 
+p {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: 0;
+  -webkit-margin-end: 0; }
+
 caption {
   caption-side: top; }
 
