--- a/css/classes.css
+++ b/css/classes.css
@@ -276,6 +276,14 @@ html[xmlns] .cf {
 /*
 ** Container **
 */
+.container {
+  -webkit-column-break-before: avoid-column;
+  break-before: avoid-column;
+  -webkit-column-break-after: avoid-column;
+  break-after: avoid-column;
+  -webkit-column-break-inside: avoid;
+  break-inside: avoid-column; }
+
 /*
 ** Containers and columns **
 */
@@ -478,7 +486,7 @@ html[xmlns] .cf {
 .grid-container {
   display: grid;
   grid-auto-flow: row dense;
-  grid-auto-columns: 8.33333%;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   max-width: 100%; }
   @media only screen and (min-width: 480px) and (max-width: 767px) {
     .grid-container {
@@ -534,146 +542,152 @@ html[xmlns] .cf {
   max-width: 100%;
   min-width: 100%;
   width: 100vw; }
-  .p-container .column-1 {
+  .p-container::after {
+    display: block;
+    clear: both;
+    line-height: 0;
+    height: 0;
+    content: " "; }
+  .p-container > .column-1 {
     max-width: 100%;
     width: 100%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-1 {
+      .p-container > .column-1 {
         min-width: 1600px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-1 {
+      .p-container > .column-1 {
         min-width: 1024px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-1 {
+      .p-container > .column-1 {
         min-width: 768px; } }
-    .p-container .column-1::after {
+    .p-container > .column-1::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
-  .p-container .column-2 {
+  .p-container > .column-2 {
     max-width: 50%;
     width: 50%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-2 {
+      .p-container > .column-2 {
         min-width: 800px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-2 {
+      .p-container > .column-2 {
         min-width: 512px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-2 {
+      .p-container > .column-2 {
         min-width: 384px; } }
-    .p-container .column-2::after {
+    .p-container > .column-2::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
-  .p-container .column-3 {
+  .p-container > .column-3 {
     max-width: 33.33333%;
     width: 33.33333%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-3 {
+      .p-container > .column-3 {
         min-width: 533.33333px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-3 {
+      .p-container > .column-3 {
         min-width: 341.33333px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-3 {
+      .p-container > .column-3 {
         min-width: 256px; } }
-    .p-container .column-3::after {
+    .p-container > .column-3::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
     @media only screen and (max-width: 480px) {
-      .p-container .column-3 {
+      .p-container > .column-3 {
         max-width: 100%;
         width: 100%; } }
-  .p-container .column-4 {
+  .p-container > .column-4 {
     max-width: 25%;
     width: 25%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-4 {
+      .p-container > .column-4 {
         min-width: 400px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-4 {
+      .p-container > .column-4 {
         min-width: 256px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-4 {
+      .p-container > .column-4 {
         min-width: 192px; } }
-    .p-container .column-4::after {
+    .p-container > .column-4::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
-      .p-container .column-4 {
+      .p-container > .column-4 {
         max-width: 100%;
         width: 100%; } }
     @media only screen and (max-width: 480px) {
-      .p-container .column-4 {
+      .p-container > .column-4 {
         max-width: 100%;
         width: 100%; } }
-  .p-container .column-5 {
+  .p-container > .column-5 {
     max-width: 20%;
     width: 20%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-5 {
+      .p-container > .column-5 {
         min-width: 320px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-5 {
+      .p-container > .column-5 {
         min-width: 204.8px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-5 {
+      .p-container > .column-5 {
         min-width: 153.6px; } }
-    .p-container .column-5::after {
+    .p-container > .column-5::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
-      .p-container .column-5 {
+      .p-container > .column-5 {
         max-width: 100%;
         width: 100%; } }
     @media only screen and (max-width: 480px) {
-      .p-container .column-5 {
+      .p-container > .column-5 {
         max-width: 100%;
         width: 100%; } }
-  .p-container .column-6 {
+  .p-container > .column-6 {
     max-width: 16.66667%;
     width: 16.66667%;
     float: left; }
     @media only screen and (min-width: 1920px) {
-      .p-container .column-6 {
+      .p-container > .column-6 {
         min-width: 266.66667px; } }
     @media only screen and (min-width: 1600px) and (max-width: 1919px) {
-      .p-container .column-6 {
+      .p-container > .column-6 {
         min-width: 170.66667px; } }
     @media only screen and (min-width: 1024px) and (max-width: 1599px) {
-      .p-container .column-6 {
+      .p-container > .column-6 {
         min-width: 128px; } }
-    .p-container .column-6::after {
+    .p-container > .column-6::after {
       display: block;
       clear: both;
       line-height: 0;
       height: 0;
       content: " "; }
     @media only screen and (min-width: 480px) and (max-width: 767px) {
-      .p-container .column-6 {
+      .p-container > .column-6 {
         max-width: 100%;
         width: 100%; } }
     @media only screen and (max-width: 480px) {
-      .p-container .column-6 {
+      .p-container > .column-6 {
         max-width: 100%;
         width: 100%; } }
 
@@ -683,10 +697,7 @@ html[xmlns] .cf {
 .text-col-1 {
   width: 100%;
   -webkit-columns: 1;
-  columns: 1;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 1; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -697,10 +708,7 @@ html[xmlns] .cf {
 .text-col-2 {
   width: 100%;
   -webkit-columns: 2;
-  columns: 2;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 2; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -711,10 +719,7 @@ html[xmlns] .cf {
 .text-col-3 {
   width: 100%;
   -webkit-columns: 3;
-  columns: 3;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 3; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -729,10 +734,7 @@ html[xmlns] .cf {
 .text-col-4 {
   width: 100%;
   -webkit-columns: 4;
-  columns: 4;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 4; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -747,10 +749,7 @@ html[xmlns] .cf {
 .text-col-5 {
   width: 100%;
   -webkit-columns: 5;
-  columns: 5;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 5; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -770,10 +769,7 @@ html[xmlns] .cf {
 .text-col-6 {
   width: 100%;
   -webkit-columns: 6;
-  columns: 6;
-  -webkit-column-break-inside: avoid;
-  page-break-inside: avoid;
-  break-inside: avoid; }
+  columns: 6; }
   .text-col-6::after {
     display: block;
     clear: both;
