--- a/css/library.css
+++ b/css/library.css
@@ -994,14 +994,6 @@ html[xmlns] .cf {
 /*
 ** Container **
 */
-.container {
-  -webkit-column-break-before: avoid-column;
-  break-before: avoid-column;
-  -webkit-column-break-after: avoid-column;
-  break-after: avoid-column;
-  -webkit-column-break-inside: avoid;
-  break-inside: avoid-column; }
-
 /*
 ** Containers and columns **
 */
@@ -1414,8 +1406,8 @@ html[xmlns] .cf {
 */
 .text-col-1 {
   width: 100%;
-  -webkit-columns: 1;
-  columns: 1; }
+  -webkit-column-count: 1;
+  column-count: 1; }
   .text-col-1::after {
     display: block;
     clear: both;
@@ -1425,8 +1417,8 @@ html[xmlns] .cf {
 
 .text-col-2 {
   width: 100%;
-  -webkit-columns: 2;
-  columns: 2; }
+  -webkit-column-count: 2;
+  column-count: 2; }
   .text-col-2::after {
     display: block;
     clear: both;
@@ -1436,8 +1428,8 @@ html[xmlns] .cf {
 
 .text-col-3 {
   width: 100%;
-  -webkit-columns: 3;
-  columns: 3; }
+  -webkit-column-count: 3;
+  column-count: 3; }
   .text-col-3::after {
     display: block;
     clear: both;
@@ -1451,8 +1443,8 @@ html[xmlns] .cf {
 
 .text-col-4 {
   width: 100%;
-  -webkit-columns: 4;
-  columns: 4; }
+  -webkit-column-count: 4;
+  column-count: 4; }
   .text-col-4::after {
     display: block;
     clear: both;
@@ -1466,8 +1458,8 @@ html[xmlns] .cf {
 
 .text-col-5 {
   width: 100%;
-  -webkit-columns: 5;
-  columns: 5; }
+  -webkit-column-count: 5;
+  column-count: 5; }
   .text-col-5::after {
     display: block;
     clear: both;
@@ -1486,8 +1478,8 @@ html[xmlns] .cf {
 
 .text-col-6 {
   width: 100%;
-  -webkit-columns: 6;
-  columns: 6; }
+  -webkit-column-count: 6;
+  column-count: 6; }
   .text-col-6::after {
     display: block;
     clear: both;
