--- a/test/classes.pug
+++ b/test/classes.pug
@@ -335,3 +335,90 @@ head
     | .text-col-6
     br/
     | .text-col-6
+    
+.container
+  p.text-col-1#text-cols Text Columns
+  
+  p.text-col-1 .text-col-1
+  
+  p.text-col-2
+    | .text-col-2
+    br/
+    | .text-col-2
+    
+  p.text-col-3
+    | .text-col-3
+    br/
+    | .text-col-3
+    br/
+    | .text-col-3
+    
+  p.text-col-4
+    | .text-col-4
+    br/
+    | .text-col-4
+    br/
+    | .text-col-4
+    br/
+    | .text-col-4
+    
+  p.text-col-5
+    | .text-col-5
+    br/
+    | .text-col-5
+    br/
+    | .text-col-5
+    br/
+    | .text-col-5
+    br/
+    | .text-col-5
+    
+  p.text-col-6
+    | .text-col-6
+    br/
+    | .text-col-6
+    br/
+    | .text-col-6
+    br/
+    | .text-col-6
+    br/
+    | .text-col-6
+    br/
+    | .text-col-6
+    
+  // No <br>
+ 
+.container
+  .text-col-1 Text Columns
+
+  .text-col-1 .text-col-1
+
+  .text-col-2
+    | .text-col-2
+    | .text-col-2
+
+  .text-col-3
+    | .text-col-3
+    | .text-col-3
+    | .text-col-3
+
+  .text-col-4
+    | .text-col-4
+    | .text-col-4
+    | .text-col-4
+    | .text-col-4
+
+  .text-col-5
+    | .text-col-5
+    | .text-col-5
+    | .text-col-5
+    | .text-col-5
+    | .text-col-5
+
+  .text-col-6
+    | .text-col-6
+    | .text-col-6
+    | .text-col-6
+    | .text-col-6
+    | .text-col-6
+    | .text-col-6
