--- a/test/classes.pug
+++ b/test/classes.pug
@@ -222,17 +222,17 @@ head
   
 .p-container#hide-show-classes
   .column-1 Hidden / Show classes
-  .column-5.hide-phone .hide-phone
-  .column-5.hide-tablet .hide-tablet
-  .column-5.hide-tab-x .hide-tab-x
-  .column-5.hide-desktop .hide-desktop
-  .column-5.hide-big-desktop .hide-big-desktop
+  .column-2.hide-phone(style="background:#3E0074;color:#fff;") .hide-phone
+  .column-2.hide-tablet(style="background:#511981;color:#fff;") .hide-tablet
+  .column-2.hide-tab-x(style="background:#64328f;color:#fff;") .hide-tab-x
+  .column-2.hide-desktop(style="background:#774c9d;color:#fff;") .hide-desktop
+  .column-1.hide-big-desktop(style="background:#8b66ab;") .hide-big-desktop
   
-  .column-5.show-big-desktop .show-big-desktop
-  .column-5.show-desktop .show-desktop
-  .column-5.show-tab-x .show-tab-x
-  .column-5.show-tablet .show-tablet
-  .column-5.show-phone .show-phone
+  .column-2.show-phone(style="background:#2A80F7;color:#fff;") .show-phone
+  .column-2.show-tablet(style="background:#3f8cf7;color:#fff;") .show-tablet
+  .column-2.show-tab-x(style="background:#5499f8;color:#fff;") .show-tab-x
+  .column-2.show-desktop(style="background:#69a6f9;color:#fff;") .show-desktop
+  .column-1.show-big-desktop(style="background:#7fb2fa;") .show-big-desktop
   
 .container
   p.text-col-1#text-cols Text Columns
